--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -2,10 +2,8 @@ name: Ruby Gem
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+    tags:
+      - v*
 jobs:
   build:
     name: Build + Publish
